--- a/app/src/main/res/layout/noteslist_item.xml
+++ b/app/src/main/res/layout/noteslist_item.xml
@@ -13,13 +13,42 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:gravity="center_vertical"
-    android:paddingLeft="5dip"
-    android:singleLine="true"
-/>
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="10dp"
+    android:background="?android:attr/selectableItemBackground">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        android:background="@drawable/text_1"
+        android:layout_margin="7dp"
+        >
+
+
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_margin="5px"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dip"
+            android:paddingTop="3dip"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#AB000000" />
+<!--笔记列表显示笔记条目的时间戳-->
+        <TextView
+            android:id="@android:id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:paddingLeft="13dip"
+            android:textColor="#AB000000" />
+
+    </LinearLayout>
+</LinearLayout>
+
