--- a/app/src/main/res/layout/note_editor.xml
+++ b/app/src/main/res/layout/note_editor.xml
@@ -13,13 +13,14 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+<!--编辑页面的背景-->
 <view xmlns:android="http://schemas.android.com/apk/res/android"
     class="com.example.android.notepad.NoteEditor$LinedEditText"
     android:id="@+id/note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:padding="5dp"
+    android:padding="50dp"
+    android:background="@drawable/background"
     android:scrollbars="vertical"
     android:fadingEdge="vertical"
     android:gravity="top"
