--- a/app/src/main/res/layout/title_editor.xml
+++ b/app/src/main/res/layout/title_editor.xml
@@ -20,23 +20,28 @@
     android:orientation="vertical"
     android:paddingLeft="6dip"
     android:paddingRight="6dip"
-    android:paddingBottom="3dip">
-   					  
-    <EditText android:id="@+id/title" 
-        android:maxLines="1" 
+    android:paddingBottom="3dip"
+    android:background="#F2E5E5"
+    >
+
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="wrap_content"
-      	android:ems="25"
-        android:layout_height="wrap_content" 
+        android:textColor="#000000"
         android:autoText="true"
         android:capitalize="sentences"
+        android:ems="25"
+        android:maxLines="1"
         android:scrollHorizontally="true" />
-   		
+
     <Button android:id="@+id/ok"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:layout_gravity="right"
+        android:background="@drawable/ok_1"
         android:text="@string/button_ok"
         android:onClick="onClickOk" />
    		
