--- a/app/src/main/res/menu/editor_options_menu.xml
+++ b/app/src/main/res/menu/editor_options_menu.xml
@@ -12,4 +12,18 @@
           android:icon="@drawable/ic_menu_delete"
           android:title="@string/menu_delete"
           android:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/menu_increase_font_size"
+        android:title="大大大大"
+        />
+    <item
+        android:id="@+id/menu_decrease_font_size"
+        android:title="小小小小"
+        />
+
+    <!-- 字体颜色 -->
+    <item
+        android:id="@+id/menu_change_font_color"
+        android:title="变变变变"
+        />
 </menu>
