--- a/app/src/main/res/menu/list_options_menu.xml
+++ b/app/src/main/res/menu/list_options_menu.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--  This is our one standard application action (creating a new note). -->
+<!--    <item android:id="@+id/menu_search"-->
+<!--          android:title="@string/menu_select"-->
+<!--          android:icon="@android:drawable/ic_menu_search"-->
+<!--          android:showAsAction="always"-->
+<!--          />-->
+    <item
+        android:id="@+id/menu_search"
+        android:title="Search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:showAsAction="ifRoom|collapseActionView"
+        android:actionViewClass="android.widget.SearchView" />
     <item android:id="@+id/menu_add"
           android:icon="@drawable/ic_menu_compose"
           android:title="@string/menu_add"
